# Unity-Extend

./: .gitignore  .gitmodules  LICENSE  README.md  RedirectUnityOut.py
Assets/: Cell.prefab  GameObject.prefab  New Animation.anim  ParticlePreview.prefab  Show.asset  Tools.shadervariants  UniversalRenderPipelineAsset.asset  UniversalRenderPipelineAsset_Renderer.asset  UniversalRenderPipelineAsset_UI_Renderer.asset  csc.rsp  link.xml
Assets/DOTween/: DOTweenAssembly.asmdef
Assets/Editor/: CustomPreviewProcessor.cs  EmmyLuaAPIMaker.cs  GlobalEventList.asset  LazyTextureLoader.cs
Assets/Extend/: AppStartUp.cs  DoTweenUtil.cs  GameSystem.cs  LuaAnimatorIKBinding.cs  LuaAnimatorMoveBinding.cs  LuaBinding.cs  LuaCollisionBinding.cs  LuaDragBinding.cs  LuaEnableBinding.cs  LuaVM.cs  RemoteCmdClient.cs  StaticServiceInitializer.cs
Assets/Extend/Animation/: SequenceAnimator.cs  SequencePlayerBase.cs  SpriteRendererSequencePlayer.cs  (+1 more)
Assets/Resources/: Canvas.prefab  Console.prefab  Cube.prefab  DOTweenSettings.asset  ItemSlot.prefab  UILayers.prefab
Assets/Shaders/: Special.shadervariants
Assets/SpriteAtlas/: ALL.spriteatlas
Assets/XLua/: Lua3rdLib.cs
Doc/: Async-README.md  LoopScrollRect.md  LuaBinding.md  LuaMVVMBinding.md  Lua侧异步加载同步写法.md  Sprite相关处理.md  TickService.md  UIService.md  unique_table.lua 互为索引的表.md  事件路由.md  配置读取ConfigService.md  额外的Lua扩展.md
Extend/: LuaBinding.cs  LuaBinding_Update.cs  LuaMVVM.cs  LuaMVVMBinding.cs  LuaMVVMRoot.cs  LuaVM.cs  StaticServiceInitializer.cs  TickService.cs
Extend/ABSystem/: ABInstance.cs  ABService.cs  AssetInstance.cs
Extend/AssetService/: ABInstance.cs  ABService.cs  AssetAsyncLoadHandle.cs  AssetAsyncProvider.cs  AssetBundleInstance.cs  AssetContainer.cs  AssetInstance.cs  AssetRefObject.cs  AssetReference.cs  AssetService.cs  Extend.AssetService.asmdef  IAssetService.cs  ResourcesService.cs
Extend/Common/: AnimatorParamProcessor.cs  CSharpServiceManager.cs  Extend.Common.asmdef  GlobalCoroutineRunnerService.cs  RefObject.cs  SerializableDictionary.cs  String2TypeCache.cs
Extend/Editor/: AssetPathPropertyDrawer.cs  EmmyLuaAPIMaker.cs  LuaBindingEditor.cs  LuaClassEditorFactory.cs  LuaScriptImporter.cs  SerializableDictionaryPropertyDrawer.cs  String2TypeCache.cs  XLuaConfig.cs
Extend/Example/: BindingDemo.unity
Extend/LM/: LMImageBinding.cs  LMInitializer.cs  LMReflectionBinding.cs  LMTextBinding.cs  LMToggleBinding.cs
Extend/LuaBindingData/: AssetPathAttribute.cs  LuaBindingAssetReferenceData.cs  LuaBindingBooleanData.cs  LuaBindingData.cs  LuaBindingNumberData.cs  LuaBindingUOArrayData.cs  LuaBindingUOData.cs  String2TypeCache.cs
Extend/LuaBindingEvent/: LuaBindingAnimatorEvent.cs  LuaBindingClickEvent.cs  LuaBindingDragEvent.cs  LuaBindingUpDownMoveEvent.cs  LuaEventsAttribute.cs
Extend/LuaMVVM/: LuaMVVM.cs  LuaMVVMBindingOption.cs
Extend/LuaUtil/: ConfigUtil.cs  UnityExtension4XLua.cs
Extend/Switcher/: AnimatorSwitcher.cs  StateSwitcher.cs
Extend/UI/: IUIAnimationPreview.cs  UIAnimation.cs  UIButton.cs
Lua/: ConfigService.lua  EmmyDebugger.lua  EmmyDebuggerBridge.lua  PreRequest.lua  ServiceManager.lua  TickService.lua  Time.lua  util.lua
Lua/Test/: UICharacter.lua  UILogin.lua
Lua/UI/: UIService.lua  UIService_Tip.lua  UIViewContext.lua
Lua/base/: EventBindingService.lua  EventDispatcher.lua  GlobalEventDispatcher.lua  LuaBindingBase.lua  MockService.lua  async.lua  class.lua  cs_coroutine.lua  unique_table.lua
Lua/hotfix/: hotfix.lua
Lua/luacov/: reporter.lua
Lua/mvvm/: GlobalVMService.lua  binding.lua
Lua/sproto/: SprotoClient.lua
ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  InputManager.asset  ProjectSettings.asset  QualitySettings.asset  RiderScriptEditorPersistedState.asset  TagManager.asset  UnityConnectSettings.asset
Resources/: Button.prefab  Canvas.prefab  DOTweenSettings.asset  ItemSlot.prefab  SwitchTestController.controller
Resources/Lua/: ConfigService.lua  PreRequest.lua  ServiceManager.lua  class.lua  mvvm.lua
Server/: config
Server/proto/: c2s.sproto  s2c.sproto
Server/script/: agent.lua  main.lua  protoloader.lua
SpriteAtlas/: ALL.spriteatlas
Tools/Blender/: decimate.py
Tools/Jenkins/: BuildAndroidAssetBundle.powershell  PackageAndroidApk.powershell
Tools/XLSXConvert/: IntelliSenseGenerate.js  main.js  package-lock.json  package.json  server.js  test_excel.xlsx
Tools/dependency-server/: app.js  package.json
UnityRemoteCmd/Server/: DeviceRegisterTcpServer.cs  DeviceTcpClient.cs  Program.cs  Router.cs  UserHttpServer.cs
UserSettings/: EditorUserSettings.asset
UserSettings/Layouts/: default-2021.dwlt
admin-server/: app.js  package.json
admin-server/config/: default.json
admin-server/routes/: im-notify-wechat.js  log-file.js  lua-remote-cmd.js
admin-server/web/: build.sh  package.json
moon_build/: CMakeLists.txt  i64lib.c  make_android_lua54.sh  make_ios_lua54.sh  make_osx_lua54.sh  xlua通用字节码修改.md  xx.c
moon_build/EmmyDebugger/: CMakeLists.txt
moon_build/cmake/: ios.toolchain.cmake
moon_build/luac/: CMakeLists.txt
moon_build/sproto/: lsproto.c
xlua_build/: CMakeLists.txt  chronos.c  i64lib.c  make_android_lua54.sh  make_ios_lua54.sh  make_osx_lua54.sh  make_win_lua54.bat  memory_leak_checker.c  xlua.c
xlua_build/EmmyDebugger/: CMakeLists.txt
xlua_build/EmmyDebugger/emmy_debugger/: CMakeLists.txt
xlua_build/EmmyDebugger/emmy_debugger/src/: emmy_debugger.cpp
xlua_build/EmmyDebugger/emmy_debugger/src/api/: lua_state.cpp
xlua_build/lpeg/: lptree.c
xlua_build/lua-5.4.3/src/: lapi.c  lauxlib.c  lauxlib.h  lbaselib.c  lcode.c  lcorolib.c  lctype.h  ldblib.c  ldebug.c  ldo.c  ldo.h  lfunc.c  lgc.c  linit.c  liolib.c  llex.c  llex.h  lmathlib.c  lmem.c  lmem.h  loadlib.c  lobject.c  lobject.h  loslib.c  lparser.c  lstate.c  lstate.h  lstring.c  lstring.h  lstrlib.c  ltable.c  ltablib.c  ltm.c  ltm.h  lua.h  lualib.h  lundump.c  lundump.h  lutf8lib.c  lvm.c  (+2 more)
xlua_build/lua-cjson/: lua_cjson.c
xlua_build/luv/: luv.c
xlua_build/sproto/: lsproto.c
(+678 files in other folders)
